# club-management

./: .gitignore  docker-compose.yml  makefile
.github/workflows/: test.yml
backend/: .devcontainer.json  .env  Cargo.toml  dockerfile
backend/migration/src/: lib.rs  m20230917_080812_create_todo_table.rs
backend/src/: config.rs  controllers.rs  db.rs  main.rs  models.rs  routes.rs
backend/src/controllers/login/: api.rs
backend/src/controllers/todo/: api.rs
backend/src/models/: prelude.rs  todo.rs
backend/src/tests/models/: todo.rs
backend/src/types/client/: todo.rs
db/: dockerfile  my.cnf
frontend/: .devcontainer.json  README.md  dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: setup.ts
frontend/src/__tests__/components/: login.test.tsx  todo.test.tsx
frontend/src/api/: login.ts  todo.ts
frontend/src/components/: Login.tsx  NotFound.tsx  Todo.tsx
frontend/src/components/ui/: ButtonUI.tsx  ModalUI.tsx  SnackBarUI.tsx
frontend/src/utils/: date.ts
nginx/: dockerfile  nginx.conf
